test/typeerrors/Strategies/Duplicated1.type

  x :: a ; y :: b ; y :: c ;
  -------------------------
        x +++ y :: Int;;
     
a == Int : "linkerkant moet een Int zijn"
b == Int : "rechterkant moet een Int zijn";
